--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -137,7 +137,10 @@ test:
 production:
   clients:
     default:
-     uri: ENV['MONGOLAB_URI']
+     uri: <%= ENV['MONGOLAB_URI'] %>
+      options:
+        skip_version_check: true
+        safe: true
 
      options:
        connect_timeout: 15
